// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar NavBar snapshot with user 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        appName
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <label
        className="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          className="MuiSwitch-root"
        >
          <IconButton
            className="PrivateSwitchBase-root-18 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-20 Mui-disabled"
            component="span"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              checked={false}
              className="PrivateSwitchBase-input-21 MuiSwitch-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
            />
          </IconButton>
          <span
            className="MuiSwitch-track"
          />
        </span>
        <Typography
          className="MuiFormControlLabel-label Mui-disabled"
          component="span"
        >
          Auto Fetching
        </Typography>
      </label>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        <Avatar
          className="avatar"
        >
          <Typography
            color="inherit"
          >
            n
          </Typography>
        </Avatar>
        <Typography
          color="inherit"
        >
          logout
        </Typography>
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <label
            className="MuiFormControlLabel-root"
          >
            <span
              className="MuiSwitch-root"
            >
              <IconButton
                className="PrivateSwitchBase-root-18 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                component="span"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiSwitch-thumb"
                />
                <input
                  checked={false}
                  className="PrivateSwitchBase-input-21 MuiSwitch-input"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </IconButton>
              <span
                className="MuiSwitch-track"
              />
            </span>
            <Typography
              className="MuiFormControlLabel-label"
              component="span"
            >
              Auto Fetching
            </Typography>
          </label>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          <Avatar
            className="avatar"
          >
            <Typography
              color="inherit"
            >
              n
            </Typography>
          </Avatar>
          <Typography
            color="textPrimary"
          >
            logout
          </Typography>
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;

exports[`Navbar NavBar snapshot without user 1`] = `
<AppBar
  className="appbar"
  data-testid="navbar"
  position="static"
>
  <Toolbar>
    <Link
      className="link flex1"
      data-testid="titleLink"
      to="/"
    >
      <Typography
        color="inherit"
        variant="h6"
      >
        appName
      </Typography>
    </Link>
    <Hidden
      only="xs"
    >
      <label
        className="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          className="MuiSwitch-root"
        >
          <IconButton
            className="PrivateSwitchBase-root-18 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-20 Mui-disabled"
            component="span"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiSwitch-thumb"
            />
            <input
              checked={false}
              className="PrivateSwitchBase-input-21 MuiSwitch-input"
              disabled={true}
              onChange={[Function]}
              type="checkbox"
            />
          </IconButton>
          <span
            className="MuiSwitch-track"
          />
        </span>
        <Typography
          className="MuiFormControlLabel-label Mui-disabled"
          component="span"
        >
          Auto Fetching
        </Typography>
      </label>
      <Button
        color="inherit"
        data-testid="loginButton"
        onClick={[Function]}
      >
        login
      </Button>
    </Hidden>
    <Hidden
      only={
        Array [
          "xl",
          "lg",
          "md",
          "sm",
        ]
      }
    >
      <IconButton
        aria-haspopup="true"
        aria-label="Menu"
        aria-owns={null}
        color="inherit"
        data-testid="navbarDropMenuButton"
        onClick={[Function]}
      >
        <MenuIcon />
      </IconButton>
      <Menu
        anchorEl={null}
        data-testid="dropDownMenu"
        id="simple-menu"
        onClose={[Function]}
        open={false}
      >
        <MenuItem>
          <label
            className="MuiFormControlLabel-root"
          >
            <span
              className="MuiSwitch-root"
            >
              <IconButton
                className="PrivateSwitchBase-root-18 MuiSwitch-switchBase MuiSwitch-colorSecondary"
                component="span"
                disabled={false}
                onBlur={[Function]}
                onFocus={[Function]}
                tabIndex={null}
              >
                <span
                  className="MuiSwitch-thumb"
                />
                <input
                  checked={false}
                  className="PrivateSwitchBase-input-21 MuiSwitch-input"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </IconButton>
              <span
                className="MuiSwitch-track"
              />
            </span>
            <Typography
              className="MuiFormControlLabel-label"
              component="span"
            >
              Auto Fetching
            </Typography>
          </label>
        </MenuItem>
        <MenuItem
          data-testid="loginMenu"
          onClick={[Function]}
        >
          login
        </MenuItem>
      </Menu>
    </Hidden>
  </Toolbar>
</AppBar>
`;
